--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "madexdame",
   "version": "0.0.0",
+  "private": true,
+  "type": "module",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:madexdame": "node dist/madexdame/server/server.mjs"
+    "build:ssr": "ng build --configuration production && ng run madexdame:server:production",
+    "serve:ssr": "node --experimental-specifier-resolution=node dist/madexdame/server/server.mjs",
+    "start:ssr": "npm run build:ssr && npm run serve:ssr",
+    "dev:ssr": "ng run madexdame:serve-ssr",
+    "prerender": "ng run madexdame:prerender"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "^19.1.0",
+    "@angular/cdk": "^19.1.0",
     "@angular/common": "^19.1.0",
     "@angular/compiler": "^19.1.0",
     "@angular/core": "^19.1.0",
@@ -21,7 +25,16 @@
     "@angular/platform-server": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.5",
+    "animejs": "3.2.2",
+    "bootstrap": "^5.3.3",
+    "compression": "1.7.4",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-static-gzip": "2.1.8",
+    "glob": "11.0.0",
+    "gsap": "^3.12.5",
+    "madexdame": "file:",
+    "node-fetch": "^3.3.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -30,15 +43,23 @@
     "@angular-devkit/build-angular": "^19.1.5",
     "@angular/cli": "^19.1.5",
     "@angular/compiler-cli": "^19.1.0",
+    "@types/animejs": "^3.1.12",
+    "@types/compression": "1.7.5",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "cssnano": "7.0.6",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "rimraf": "6.0.1",
     "typescript": "~5.7.2"
+  },
+  "overrides": {
+    "glob": "11.0.0"
   }
 }
